# server.js
@@ -10,64 +10,60 @@ const cors = require('cors');
 const port = process.env.PORT || 3000;
 const app = express();
 
-app
-   .use(bodyParser.json())
-   .use(session({
+app.use(bodyParser.json());
+app.use(session({
     secret: 'secret',
     resave: false,
     saveUninitialized: true,
-   }))
-   .use(passport.initialize())
-   .use((req, res, next) => {
-    res.setHeader("Access-Controll-Allow-Origin", "*");
-    res.setHeader("Access-Control-Allow-Origin", "*");
-    res.setHeader(
-      "Access-Control-Allow-Headers",
-      "Origin, X-Requested-With, Content-Type, Accept, Z-Key, Authorization"
-    );
-    res.setHeader(
-      "Access-Control-Allow-Methods",
-      "POST, GET, PUT, PATCH, OPTIONS, DELETE"
-    );    
-    next();
-   })
-   .use(cors({ methods: ['GET','POST','DELETE','UPDATE','PUT','PATCH']}))
-   .use(cors({ origin: '*'}))
-   .use("/", require("./routes/index.js"));
+}));
+app.use(passport.initialize());
+app.use(passport.session());
 
-passport.use(new GitHubStrategy( {
+app.use(cors({ origin: '*', methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS'] }));
+
+app.use("/", require("./routes/index.js"));
+
+passport.use(new GitHubStrategy({
     clientID: process.env.GITHUB_CLIENT_ID,
     clientSecret: process.env.GITHUB_CLIENT_SECRET,
     callbackURL: process.env.CALLBACK_URL
 },
 function(accessToken, refreshToken, profile, done) {
     return done(null, profile);
-}  
-));
+}));
 
 passport.serializeUser((user, done) => {
     done(null, user);
 });
-passport.deserializeUser(() => {
+passport.deserializeUser((user, done) => {
     done(null, user);
 });
 
 app.get('/', (req, res) => {
-    res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged Out")
+    res.send(req.session.user ? `Logged in as ${req.session.user.displayName}` : "Logged Out");
 });
 
-app.get('/auth/callback', passport.authenticate('github', {
-    failureRedirect: '/api-docs', session: false}
-    ), (req, res) => {
-        req.session.user = req.user;
+app.get('/auth/github/callback', (req, res, next) => {
+    passport.authenticate('github', (err, user, info) => {
+        if (err) {
+            console.error('Error during authentication:', err);
+            return res.redirect('/api-docs');
+        }
+        if (!user) {
+            console.log('No user found:', info);
+            return res.redirect('/api-docs');
+        }
+        req.session.user = user;
         res.redirect('/');
-    });
+    })(req, res, next);
+});
 
 mongoDB.initDb((err, mongoDB) => {
     if (err) {
         console.log(err);
     } else {
-        app.listen(port);
-        console.log(`app started on Port ${port}`);
+        app.listen(port, () => {
+            console.log(`App started on Port ${port}`);
+        });
     }
 });
